@@ -1,13 +1,14 @@
 package io.kestra.plugin.fs.sftp;
 
-import com.google.common.collect.ImmutableMap;
 import io.kestra.core.junit.annotations.KestraTest;
-import org.junit.jupiter.api.Test;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
-
 import jakarta.inject.Inject;
+import org.junit.jupiter.api.Test;
+
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.greaterThan;
@@ -35,25 +36,25 @@ class ListTest {
         List.ListBuilder<?, ?> builder = List.builder()
             .id(ListTest.class.getSimpleName())
             .type(ListTest.class.getName())
-            .from("/upload/" + dir)
-            .host("localhost")
-            .port("6622")
-            .username("foo")
-            .password("pass")
-            .rootDir(false);
+            .from(Property.of("/upload/" + dir))
+            .host(Property.of("localhost"))
+            .port(Property.of("6622"))
+            .username(Property.of("foo"))
+            .password(Property.of("pass"))
+            .rootDir(Property.of(false));
 
         List task = builder.build();
 
-        List.Output run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        List.Output run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getFiles().size(), is(7));
         run.getFiles().forEach(file -> assertThat(file.getSize(), is(greaterThan(0L))));
 
         task = builder
-            .regExp(".*\\" + dir + "\\/" + lastFile + "\\.(yml|yaml)")
+            .regExp(Property.of(".*\\" + dir + "\\/" + lastFile + "\\.(yml|yaml)"))
             .build();
 
-        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getFiles().size(), is(1));
     }
